feat:新增查询任务列表等接口